--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,15 @@
 .blog-details div {
   margin: 20px 0;
 }
+.blog-details button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
 
 /* create new blog form */
 .create {
